# build-detective

./: CONTRIBUTING.md  LICENSE  README.md  bd  build_detective_agent.py  claude_build_detective.py  diagnose_agent_registration.sh  haiku_ci_analyzer.py  start-claude-autonomous.sh  vdvil_analysis_report.md
.claude/: CLAUDE.md
.claude/agents/: architect-agent.yaml  build-detective-architect.md  build-detective.md  ci-specialist-agent.yaml  cost-optimizer-agent.yaml  project-discovery-agent.yaml  validation-agent.yaml
docs/architecture/: OVERVIEW.md  VALIDATION_PATTERNS.md
docs/guides/: COMMAND_PATTERNS.md  INTEGRATION.md  QUALITY_CONTROL.md
docs/setup/: QUICK_START.md
examples/: README.md
presentation/: .gitignore  AGENT_INSTRUCTIONS.md  Architecture.md  Build_detective_core_Implementation_files.txt  Makefile  README.md  amazon_linux_claude_dev_setup.sh  install-github-cli.sh  original_prompt.txt  pyproject.toml  requirements.txt
presentation/config/: github_repos.yaml  settings.yaml
presentation/data/: issues.db
presentation/docs/: implementation-report.md
presentation/src/: __init__.py  main.py
presentation/src/analysis/: failure_analyzer.py
presentation/src/github_integration/: client.py
presentation/src/issue_tracker/: __init__.py  database.py
presentation/src/orchestrator/: supervisor.py
presentation/src/reporting/: report_generator.py
presentation/src/utils/: logger.py  token_optimizer.py
scripts/: setup-build-detective.sh  test-setup.sh
src/: __init__.py  bd_claude_agent.py
templates/: README.md  build-detective-template.md
(+12 files in other folders)
